Add an audio sequencer package
- Add a MusicNote struct that describes the options to the tone() routine in plain object terms
- Add a SoundPlayer struct that manages multiple tracks and can automatically start the next note when the previous one finishes
- Could use some additional work and stress testing with multiple sound clips at once.

--- a/hello-world/Cargo.toml
+++ b/hello-world/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-buddy-alloc = { version = "0.4.1", optional = true }
+buddy-alloc = "0.4.1"
+sync-unsafe-cell = "0.1.1"
 voladdress = "1.4.0"
 
 [profile.release]
@@ -17,4 +18,3 @@ lto = true
 
 [features]
 # use `--no-default-features` or comment out next line to disable allocator
-default = ["buddy-alloc"]
